--- a/GenericProjectForSwift/Podfile
+++ b/GenericProjectForSwift/Podfile
@@ -1,6 +1,8 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+# platform :ios, '10.0'
 source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '10.0'
+
 target 'GenericProjectForSwift' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
