--- a/GenericProjectForSwift/Podfile
+++ b/GenericProjectForSwift/Podfile
@@ -1,9 +1,11 @@
 # source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '10.0'
 
-target 'GenericProjectForSwift' do
-  use_frameworks!
+use_frameworks!
 
+install! 'cocoapods', :deterministic_uuids => false, :warn_for_multiple_pod_sources => false, :warn_for_unused_master_specs_repo => false
+
+target 'GenericProjectForSwift' do
   pod 'SnapKit'
   pod 'Alamofire'
   pod 'SwiftyJSON'
